[package]
name = "cch23-kiwinick"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
serde = "1.0.193"
shuttle-axum = "0.34.0"
shuttle-runtime = "0.34.0"
tokio = "1.28.2"
tracing = "0.1.40"

[dev-dependencies]
anyhow = "1.0.75"
hyper = "0.14.27"
mime = "0.3.17"
serde_json = "1.0.108"
tower = "0.4.13"
