[package]
name = "cch23-kiwinick"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.2"
serde = "1.0.193"
shuttle-axum = { version = "0.35.0", default-features = false, features = ["axum-0-7"] }
shuttle-runtime = "0.35.0"
tokio = "1.28.2"
tracing = "0.1.40"

[dev-dependencies]
anyhow = "1.0.75"
http-body-util = "0.1.0"
mime = "0.3.17"
serde_json = "1.0.108"
tower = "0.4.13"
